--- a/Wassily/Wassily.csproj
+++ b/Wassily/Wassily.csproj
@@ -131,6 +131,8 @@
     <Compile Include="Assets\OvrAvatar\Scripts\OvrAvatarSkinnedMeshRenderComponent.cs" />
     <Compile Include="Assets\OvrAvatar\Scripts\OvrAvatarSkinnedMeshRenderPBSComponent.cs" />
     <Compile Include="Assets\OvrAvatar\Scripts\OvrAvatarTouchController.cs" />
+    <Compile Include="Assets\Scripts\HandCollision.cs" />
+    <Compile Include="Assets\Scripts\PurpleTriangle.cs" />
     <Compile Include="Assets\Scripts\TouchController.cs" />
   </ItemGroup>
   <ItemGroup>
