--- a/Wassily/Wassily.csproj
+++ b/Wassily/Wassily.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Assets\Scripts\HandCollision.cs" />
     <Compile Include="Assets\Scripts\PurpleTriangle.cs" />
     <Compile Include="Assets\Scripts\TouchController.cs" />
+    <Compile Include="Assets\Scripts\Tri2Script.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\OVR\Editor\AndroidManifest.OVRSubmission.xml" />
